# vyatta-netflow

./: .frlog  .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-netflow.postinst.in
lib/Vyatta/: Netflow.pm
scripts/: quagga_gen_as_network.pl  vyatta-netflow.pl  vyatta-show-acct.pl
templates-cfg/system/accounting/netflow/: node.def
templates-cfg/system/accounting/netflow/engine-id/: node.def
templates-cfg/system/accounting/netflow/timeout/: node.def
templates-cfg/system/accounting/syslog-facility/: node.def
templates-cfg/system/flow-accounting/: node.def
templates-cfg/system/flow-accounting/bgp-daemon/: node.def
templates-cfg/system/flow-accounting/bgp-daemon/ip/: node.def
templates-cfg/system/flow-accounting/buffer-size/: node.def
templates-cfg/system/flow-accounting/disable-imt/: node.def
templates-cfg/system/flow-accounting/generate-asn/: node.def
templates-cfg/system/flow-accounting/interface/: node.def
templates-cfg/system/flow-accounting/netflow/: node.def
templates-cfg/system/flow-accounting/sflow/: node.def
templates-cfg/system/flow-accounting/syslog-facility/: node.def
templates-op/clear/accounting/: node.def
templates-op/clear/accounting/counters/: node.def
templates-op/clear/accounting/interface/: node.def
templates-op/clear/flow-accounting/: node.def
templates-op/clear/flow-accounting/process/: node.def
templates-op/restart/flow-accounting/: node.def
templates-op/show/accounting/interface/: node.def
templates-op/show/flow-accounting/: node.def
(+41 files in other folders)
